cabal-version:       2.2

name:                advent-of-code2020
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        ISC
author:              adamking
-- copyright:
-- category:
build-type:          Simple

executable advent-of-code2020
  main-is:             Main.hs
  other-modules:
      DayOne
    , DayTwo
    , DayThree
    , DayFour
    , DayFive
    , DaySix
    , DaySeven
    , DayEight
    , DayNine
    , DayTen
    , DayEleven
    , DayTwelve

  build-depends:       
      base >=4.13 && <4.15
    , array
    , attoparsec
    , bytestring < 11.0
    , containers
    , fgl
    , hashable
    , transformers
    , MemoTrie
    , mtl
    , vector

  default-language:    Haskell2010
  ghc-options: -O2 -Wall -Wno-type-defaults
